--- a/DepartmentsApi/appsettings.json
+++ b/DepartmentsApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBConnectionString": "Host=localhost;Port=5432;Database=DepartmentsBD;Username=Wisebrain;Password=iamroot"
+  }
 }
