--- a/DepartmentsWeb/appsettings.json
+++ b/DepartmentsWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "DepartmentsAPI": "http://localhost:5105/departments"
+  }
 }
